gitops/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: jellyfin
      appProtocol: kubernetes.io/wss
  selector:
    app: jellyfin
    role: web
