gitops/apps/jellyfin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: jellyfin
  selector:
    app: jellyfin
    role: web
