gitops/apps/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  labels:
    probe: enabled
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - "jellyfin.bealv.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: "3600s"
        backendRequest: "3600s"
      backendRefs:
        - name: jellyfin
          port: 8096
