gitops/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    external-dns.alpha.kubernetes.io/target: 550e0dbd-4087-47b2-ba9e-e5622e40b399.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    cert-manager.io/cluster-issuer: bealvio
    projectcontour.io/websocket-routes: /socket
  labels:
    probe: enabled
spec:
  ingressClassName: external
  rules:
    - host: 'jellyfin.bealv.io'
      http:
        paths:
          - path: /socket
            pathType: Prefix
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
  tls:
    - hosts:
        - 'jellyfin.bealv.io'
      secretName: jellyfin-tls
